# flaskBlog

./: .dockerignore  .gitignore  .imgbotconfig  CITATION.cff  Dockerfile  LICENSE  Pipfile  Procfile  README.md  UISelector.py  app.py  constants.py  contextProcessor.py  dbChecker.py  delete.py  desktop.py  docker-compose.yml  errorHandlers.py  forms.py  helpers.py  lab.side  modules.py  pyproject.toml  requirements.txt  script.py  tables.py  vercel.json
app/: app.py  constants.py  modules.py  pyproject.toml  settings.py
app/db/: analytics.db  comments.db  users.db
app/log/: log.json
app/routes/: about.py  accountSettings.py  account_settings.py  adminPanel.py  adminPanelComments.py  adminPanelPosts.py  adminPanelUsers.py  admin_panel.py  admin_panel_comments.py  admin_panel_posts.py  admin_panel_users.py  category.py  changeLanguage.py  changePassword.py  changeProfilePicture.py  changeUserName.py  change_language.py  change_password.py  change_profile_picture.py  change_user_name.py  createPost.py  create_post.py  dashboard.py  editPost.py  edit_post.py  index.py  login.py  logout.py  passwordReset.py  password_reset.py  post.py  postsAnalytics.py  posts_analytics.py  privacyPolicy.py  privacy_policy.py  returnPostAnalyticsData.py  returnPostBanner.py  return_post_analytics_data.py  return_post_banner.py  search.py  (+10 more)
app/templates/: about.html  accountSettings.html  adminPanel.html  adminPanelComments.html  adminPanelUsers.html  category.html  changeLanguage.html  changePassword.html  changeProfilePicture.html  changeUserName.html  createPost.html  csrfError.html  dashboard.html  editPost.html  index.html  layout.html  login.html  passwordReset.html  (+8 more)
(+443 files in other folders)
