[project]
name = "flaskBlog"
version = "3.0.0dev"
description = "Blog application built with Flask"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "geoip2>=5.0.1",
    "passlib>=1.7.4",
    "tamga>=0.1.13",
    "user-agents>=2.2.0",
    "wtforms>=3.2.1",
]

[tool.ruff.lint]
ignore = ["F401", "E722", "E402"]
